Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> stmt_list
Rule 2     stmt_list -> stmt_list statement
Rule 3     stmt_list -> statement
Rule 4     statement -> declaration NL
Rule 5     statement -> assignment NL
Rule 6     statement -> for NL
Rule 7     statement -> if NL
Rule 8     statement -> operation NL
Rule 9     statement -> function NL
Rule 10    statement -> function_call NL
Rule 11    declaration -> type VARIABLE EQ expression
Rule 12    declaration -> type VARIABLE EQ L_FIGBRACKET decl_list R_FIGBRACKET
Rule 13    declaration -> type VARIABLE error
Rule 14    decl_list -> L_FIGBRACKET expr_list R_FIGBRACKET
Rule 15    decl_list -> decl_list COMMA L_FIGBRACKET decl_list R_FIGBRACKET
Rule 16    decl_list -> expr_list
Rule 17    expr_list -> expr_list COMMA expression
Rule 18    expr_list -> expression
Rule 19    type -> int
Rule 20    type -> bool
Rule 21    int -> INT
Rule 22    int -> CINT
Rule 23    int -> VINT
Rule 24    int -> MINT
Rule 25    int -> CVINT
Rule 26    int -> CMINT
Rule 27    bool -> BOOL
Rule 28    bool -> CBOOL
Rule 29    bool -> VBOOL
Rule 30    bool -> MBOOL
Rule 31    bool -> CVBOOL
Rule 32    bool -> CMBOOL
Rule 33    func_list -> func_list COMMA func
Rule 34    func_list -> func
Rule 35    func -> type VARIABLE
Rule 36    func -> type VARIABLE EQ const
Rule 37    func -> type VARIABLE EQ decl_list
Rule 38    func -> type VARIABLE EQ L_FIGBRACKET decl_list R_FIGBRACKET
Rule 39    expression -> math_expression
Rule 40    expression -> const
Rule 41    expression -> variable
Rule 42    math_expression -> expression PLUS expression
Rule 43    math_expression -> expression MINUS expression
Rule 44    math_expression -> expression MUL_MATRIX expression
Rule 45    math_expression -> expression MUL_ELEM expression
Rule 46    math_expression -> expression TRANSPOSE
Rule 47    math_expression -> SUM LBRACKET expression RBRACKET
Rule 48    math_expression -> expression STL
Rule 49    math_expression -> expression STR
Rule 50    math_expression -> DENY expression
Rule 51    math_expression -> expression AND expression
Rule 52    math_expression -> expression LESS expression
Rule 53    math_expression -> expression GREATER expression
Rule 54    const -> TRUE
Rule 55    const -> FALSE
Rule 56    const -> INT_DEC
Rule 57    const -> INT_BIN
Rule 58    variable -> VARIABLE
Rule 59    variable -> VARIABLE LBRACKET index RBRACKET
Rule 60    ind -> COMMA
Rule 61    ind -> COMMA COLON
Rule 62    ind -> COLON COMMA
Rule 63    index -> expression
Rule 64    index -> expr_list
Rule 65    index -> expr_list ind
Rule 66    index -> ind expr_list
Rule 67    index -> decl_list ind
Rule 68    index -> ind decl_list
Rule 69    index -> decl_list
Rule 70    index -> L_FIGBRACKET decl_list R_FIGBRACKET
Rule 71    operation -> MOVE LBRACKET math_expression RBRACKET
Rule 72    operation -> RIGHT
Rule 73    operation -> LEFT
Rule 74    operation -> WALL
Rule 75    operation -> EXIT
Rule 76    assignment -> variable ASSIGNMENT expression
Rule 77    assignment -> variable ASSIGNMENT L_FIGBRACKET decl_list R_FIGBRACKET
Rule 78    assignment -> variable ASSIGNMENT error
Rule 79    for -> FOR VARIABLE EQ expression COLON expression BEGINFOR NL stmt_list ENDFOR
Rule 80    for -> FOR VARIABLE EQ expression COLON expression BEGIN NL stmt_list END
Rule 81    for -> FOR error
Rule 82    if -> IF math_expression BEGINIF NL stmt_list ENDIF
Rule 83    if -> IF math_expression BEGIN NL stmt_list END
Rule 84    if -> IF error
Rule 85    return_list -> return_list COMMA type VARIABLE
Rule 86    return_list -> type VARIABLE
Rule 87    call_list -> call_list COMMA expression
Rule 88    call_list -> expression
Rule 89    function -> return_list EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
Rule 90    function -> FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
Rule 91    function -> return_list EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
Rule 92    function -> FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
Rule 93    function -> type VARIABLE EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
Rule 94    function -> type VARIABLE EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
Rule 95    function -> FUNCTION error
Rule 96    function_call -> VARIABLE
Rule 97    function_call -> VARIABLE call_list
Rule 98    function_call -> ret_list ASSIGNMENT VARIABLE call_list
Rule 99    function_call -> ret_list ASSIGNMENT VARIABLE
Rule 100   function_call -> variable ASSIGNMENT VARIABLE call_list
Rule 101   function_call -> type VARIABLE EQ VARIABLE call_list
Rule 102   ret_list -> variable
Rule 103   ret_list -> ret_list COMMA variable

Terminals, with rules where they appear

AND                  : 51
ASSIGNMENT           : 76 77 78 98 99 100
BEGIN                : 80 83 89 90 91 92 93 94
BEGINFOR             : 79
BEGINIF              : 82
BOOL                 : 27
CBOOL                : 28
CINT                 : 22
CMBOOL               : 32
CMINT                : 26
COLON                : 61 62 79 80
COMMA                : 15 17 33 60 61 62 85 87 103
CVBOOL               : 31
CVINT                : 25
DENY                 : 50
END                  : 80 83 89 90 91 92 93 94
ENDFOR               : 79
ENDIF                : 82
EQ                   : 11 12 36 37 38 79 80 89 91 93 94 101
EXIT                 : 75
FALSE                : 55
FOR                  : 79 80 81
FUNCTION             : 89 90 91 92 93 94 95
GREATER              : 53
IF                   : 82 83 84
INT                  : 21
INT_BIN              : 57
INT_DEC              : 56
LBRACKET             : 47 59 71 89 90 91 92 93 94
LEFT                 : 73
LESS                 : 52
L_FIGBRACKET         : 12 14 15 38 70 77
MBOOL                : 30
MINT                 : 24
MINUS                : 43
MOVE                 : 71
MUL_ELEM             : 45
MUL_MATRIX           : 44
NL                   : 4 5 6 7 8 9 10 79 80 82 83 89 90 91 92 93 94
PLUS                 : 42
RBRACKET             : 47 59 71 89 90 91 92 93 94
RIGHT                : 72
R_FIGBRACKET         : 12 14 15 38 70 77
STL                  : 48
STR                  : 49
SUM                  : 47
TRANSPOSE            : 46
TRUE                 : 54
VARIABLE             : 11 12 13 35 36 37 38 58 59 79 80 85 86 89 90 91 92 93 93 94 94 96 97 98 99 100 101 101
VBOOL                : 29
VINT                 : 23
WALL                 : 74
error                : 13 78 81 84 95

Nonterminals, with rules where they appear

assignment           : 5
bool                 : 20
call_list            : 87 97 98 100 101
const                : 36 40
decl_list            : 12 15 15 37 38 67 68 69 70 77
declaration          : 4
expr_list            : 14 16 17 64 65 66
expression           : 11 17 18 42 42 43 43 44 44 45 45 46 47 48 49 50 51 51 52 52 53 53 63 76 79 79 80 80 87 88
for                  : 6
func                 : 33 34
func_list            : 33 89 90 93
function             : 9
function_call        : 10
if                   : 7
ind                  : 65 66 67 68
index                : 59
int                  : 19
math_expression      : 39 71 82 83
operation            : 8
program              : 0
ret_list             : 98 99 103
return_list          : 85 89 91
statement            : 2 3
stmt_list            : 1 2 79 80 82 83 89 90 91 92 93 94
type                 : 11 12 13 35 36 37 38 85 86 93 94 101
variable             : 41 76 77 78 100 102 103

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . stmt_list
    (2) stmt_list -> . stmt_list statement
    (3) stmt_list -> . statement
    (4) statement -> . declaration NL
    (5) statement -> . assignment NL
    (6) statement -> . for NL
    (7) statement -> . if NL
    (8) statement -> . operation NL
    (9) statement -> . function NL
    (10) statement -> . function_call NL
    (11) declaration -> . type VARIABLE EQ expression
    (12) declaration -> . type VARIABLE EQ L_FIGBRACKET decl_list R_FIGBRACKET
    (13) declaration -> . type VARIABLE error
    (76) assignment -> . variable ASSIGNMENT expression
    (77) assignment -> . variable ASSIGNMENT L_FIGBRACKET decl_list R_FIGBRACKET
    (78) assignment -> . variable ASSIGNMENT error
    (79) for -> . FOR VARIABLE EQ expression COLON expression BEGINFOR NL stmt_list ENDFOR
    (80) for -> . FOR VARIABLE EQ expression COLON expression BEGIN NL stmt_list END
    (81) for -> . FOR error
    (82) if -> . IF math_expression BEGINIF NL stmt_list ENDIF
    (83) if -> . IF math_expression BEGIN NL stmt_list END
    (84) if -> . IF error
    (71) operation -> . MOVE LBRACKET math_expression RBRACKET
    (72) operation -> . RIGHT
    (73) operation -> . LEFT
    (74) operation -> . WALL
    (75) operation -> . EXIT
    (89) function -> . return_list EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (90) function -> . FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (91) function -> . return_list EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (92) function -> . FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (93) function -> . type VARIABLE EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (94) function -> . type VARIABLE EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (95) function -> . FUNCTION error
    (96) function_call -> . VARIABLE
    (97) function_call -> . VARIABLE call_list
    (98) function_call -> . ret_list ASSIGNMENT VARIABLE call_list
    (99) function_call -> . ret_list ASSIGNMENT VARIABLE
    (100) function_call -> . variable ASSIGNMENT VARIABLE call_list
    (101) function_call -> . type VARIABLE EQ VARIABLE call_list
    (19) type -> . int
    (20) type -> . bool
    (58) variable -> . VARIABLE
    (59) variable -> . VARIABLE LBRACKET index RBRACKET
    (85) return_list -> . return_list COMMA type VARIABLE
    (86) return_list -> . type VARIABLE
    (102) ret_list -> . variable
    (103) ret_list -> . ret_list COMMA variable
    (21) int -> . INT
    (22) int -> . CINT
    (23) int -> . VINT
    (24) int -> . MINT
    (25) int -> . CVINT
    (26) int -> . CMINT
    (27) bool -> . BOOL
    (28) bool -> . CBOOL
    (29) bool -> . VBOOL
    (30) bool -> . MBOOL
    (31) bool -> . CVBOOL
    (32) bool -> . CMBOOL

    FOR             shift and go to state 14
    IF              shift and go to state 15
    MOVE            shift and go to state 16
    RIGHT           shift and go to state 17
    LEFT            shift and go to state 18
    WALL            shift and go to state 19
    EXIT            shift and go to state 20
    FUNCTION        shift and go to state 22
    VARIABLE        shift and go to state 12
    INT             shift and go to state 26
    CINT            shift and go to state 27
    VINT            shift and go to state 28
    MINT            shift and go to state 29
    CVINT           shift and go to state 30
    CMINT           shift and go to state 31
    BOOL            shift and go to state 32
    CBOOL           shift and go to state 33
    VBOOL           shift and go to state 34
    MBOOL           shift and go to state 35
    CVBOOL          shift and go to state 36
    CMBOOL          shift and go to state 37

    program                        shift and go to state 1
    stmt_list                      shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    for                            shift and go to state 6
    if                             shift and go to state 7
    operation                      shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    type                           shift and go to state 11
    variable                       shift and go to state 13
    return_list                    shift and go to state 21
    ret_list                       shift and go to state 23
    int                            shift and go to state 24
    bool                           shift and go to state 25

state 1

    (0) S' -> program .



state 2

    (1) program -> stmt_list .
    (2) stmt_list -> stmt_list . statement
    (4) statement -> . declaration NL
    (5) statement -> . assignment NL
    (6) statement -> . for NL
    (7) statement -> . if NL
    (8) statement -> . operation NL
    (9) statement -> . function NL
    (10) statement -> . function_call NL
    (11) declaration -> . type VARIABLE EQ expression
    (12) declaration -> . type VARIABLE EQ L_FIGBRACKET decl_list R_FIGBRACKET
    (13) declaration -> . type VARIABLE error
    (76) assignment -> . variable ASSIGNMENT expression
    (77) assignment -> . variable ASSIGNMENT L_FIGBRACKET decl_list R_FIGBRACKET
    (78) assignment -> . variable ASSIGNMENT error
    (79) for -> . FOR VARIABLE EQ expression COLON expression BEGINFOR NL stmt_list ENDFOR
    (80) for -> . FOR VARIABLE EQ expression COLON expression BEGIN NL stmt_list END
    (81) for -> . FOR error
    (82) if -> . IF math_expression BEGINIF NL stmt_list ENDIF
    (83) if -> . IF math_expression BEGIN NL stmt_list END
    (84) if -> . IF error
    (71) operation -> . MOVE LBRACKET math_expression RBRACKET
    (72) operation -> . RIGHT
    (73) operation -> . LEFT
    (74) operation -> . WALL
    (75) operation -> . EXIT
    (89) function -> . return_list EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (90) function -> . FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (91) function -> . return_list EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (92) function -> . FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (93) function -> . type VARIABLE EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (94) function -> . type VARIABLE EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (95) function -> . FUNCTION error
    (96) function_call -> . VARIABLE
    (97) function_call -> . VARIABLE call_list
    (98) function_call -> . ret_list ASSIGNMENT VARIABLE call_list
    (99) function_call -> . ret_list ASSIGNMENT VARIABLE
    (100) function_call -> . variable ASSIGNMENT VARIABLE call_list
    (101) function_call -> . type VARIABLE EQ VARIABLE call_list
    (19) type -> . int
    (20) type -> . bool
    (58) variable -> . VARIABLE
    (59) variable -> . VARIABLE LBRACKET index RBRACKET
    (85) return_list -> . return_list COMMA type VARIABLE
    (86) return_list -> . type VARIABLE
    (102) ret_list -> . variable
    (103) ret_list -> . ret_list COMMA variable
    (21) int -> . INT
    (22) int -> . CINT
    (23) int -> . VINT
    (24) int -> . MINT
    (25) int -> . CVINT
    (26) int -> . CMINT
    (27) bool -> . BOOL
    (28) bool -> . CBOOL
    (29) bool -> . VBOOL
    (30) bool -> . MBOOL
    (31) bool -> . CVBOOL
    (32) bool -> . CMBOOL

    $end            reduce using rule 1 (program -> stmt_list .)
    FOR             shift and go to state 14
    IF              shift and go to state 15
    MOVE            shift and go to state 16
    RIGHT           shift and go to state 17
    LEFT            shift and go to state 18
    WALL            shift and go to state 19
    EXIT            shift and go to state 20
    FUNCTION        shift and go to state 22
    VARIABLE        shift and go to state 12
    INT             shift and go to state 26
    CINT            shift and go to state 27
    VINT            shift and go to state 28
    MINT            shift and go to state 29
    CVINT           shift and go to state 30
    CMINT           shift and go to state 31
    BOOL            shift and go to state 32
    CBOOL           shift and go to state 33
    VBOOL           shift and go to state 34
    MBOOL           shift and go to state 35
    CVBOOL          shift and go to state 36
    CMBOOL          shift and go to state 37

    statement                      shift and go to state 38
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    for                            shift and go to state 6
    if                             shift and go to state 7
    operation                      shift and go to state 8
    function                       shift and go to state 9
    function_call                  shift and go to state 10
    type                           shift and go to state 11
    variable                       shift and go to state 13
    return_list                    shift and go to state 21
    ret_list                       shift and go to state 23
    int                            shift and go to state 24
    bool                           shift and go to state 25

state 3

    (3) stmt_list -> statement .

    FOR             reduce using rule 3 (stmt_list -> statement .)
    IF              reduce using rule 3 (stmt_list -> statement .)
    MOVE            reduce using rule 3 (stmt_list -> statement .)
    RIGHT           reduce using rule 3 (stmt_list -> statement .)
    LEFT            reduce using rule 3 (stmt_list -> statement .)
    WALL            reduce using rule 3 (stmt_list -> statement .)
    EXIT            reduce using rule 3 (stmt_list -> statement .)
    FUNCTION        reduce using rule 3 (stmt_list -> statement .)
    VARIABLE        reduce using rule 3 (stmt_list -> statement .)
    INT             reduce using rule 3 (stmt_list -> statement .)
    CINT            reduce using rule 3 (stmt_list -> statement .)
    VINT            reduce using rule 3 (stmt_list -> statement .)
    MINT            reduce using rule 3 (stmt_list -> statement .)
    CVINT           reduce using rule 3 (stmt_list -> statement .)
    CMINT           reduce using rule 3 (stmt_list -> statement .)
    BOOL            reduce using rule 3 (stmt_list -> statement .)
    CBOOL           reduce using rule 3 (stmt_list -> statement .)
    VBOOL           reduce using rule 3 (stmt_list -> statement .)
    MBOOL           reduce using rule 3 (stmt_list -> statement .)
    CVBOOL          reduce using rule 3 (stmt_list -> statement .)
    CMBOOL          reduce using rule 3 (stmt_list -> statement .)
    $end            reduce using rule 3 (stmt_list -> statement .)
    ENDIF           reduce using rule 3 (stmt_list -> statement .)
    END             reduce using rule 3 (stmt_list -> statement .)
    ENDFOR          reduce using rule 3 (stmt_list -> statement .)


state 4

    (4) statement -> declaration . NL

    NL              shift and go to state 39


state 5

    (5) statement -> assignment . NL

    NL              shift and go to state 40


state 6

    (6) statement -> for . NL

    NL              shift and go to state 41


state 7

    (7) statement -> if . NL

    NL              shift and go to state 42


state 8

    (8) statement -> operation . NL

    NL              shift and go to state 43


state 9

    (9) statement -> function . NL

    NL              shift and go to state 44


state 10

    (10) statement -> function_call . NL

    NL              shift and go to state 45


state 11

    (11) declaration -> type . VARIABLE EQ expression
    (12) declaration -> type . VARIABLE EQ L_FIGBRACKET decl_list R_FIGBRACKET
    (13) declaration -> type . VARIABLE error
    (93) function -> type . VARIABLE EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (94) function -> type . VARIABLE EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (101) function_call -> type . VARIABLE EQ VARIABLE call_list
    (86) return_list -> type . VARIABLE

    VARIABLE        shift and go to state 46


state 12

    (96) function_call -> VARIABLE .
    (97) function_call -> VARIABLE . call_list
    (58) variable -> VARIABLE .
    (59) variable -> VARIABLE . LBRACKET index RBRACKET
    (87) call_list -> . call_list COMMA expression
    (88) call_list -> . expression
    (39) expression -> . math_expression
    (40) expression -> . const
    (41) expression -> . variable
    (42) math_expression -> . expression PLUS expression
    (43) math_expression -> . expression MINUS expression
    (44) math_expression -> . expression MUL_MATRIX expression
    (45) math_expression -> . expression MUL_ELEM expression
    (46) math_expression -> . expression TRANSPOSE
    (47) math_expression -> . SUM LBRACKET expression RBRACKET
    (48) math_expression -> . expression STL
    (49) math_expression -> . expression STR
    (50) math_expression -> . DENY expression
    (51) math_expression -> . expression AND expression
    (52) math_expression -> . expression LESS expression
    (53) math_expression -> . expression GREATER expression
    (54) const -> . TRUE
    (55) const -> . FALSE
    (56) const -> . INT_DEC
    (57) const -> . INT_BIN
    (58) variable -> . VARIABLE
    (59) variable -> . VARIABLE LBRACKET index RBRACKET

    NL              reduce using rule 96 (function_call -> VARIABLE .)
    ASSIGNMENT      reduce using rule 58 (variable -> VARIABLE .)
    COMMA           reduce using rule 58 (variable -> VARIABLE .)
    LBRACKET        shift and go to state 49
    SUM             shift and go to state 54
    DENY            shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    INT_DEC         shift and go to state 58
    INT_BIN         shift and go to state 59
    VARIABLE        shift and go to state 47

    call_list                      shift and go to state 48
    expression                     shift and go to state 50
    math_expression                shift and go to state 51
    const                          shift and go to state 52
    variable                       shift and go to state 53

state 13

    (76) assignment -> variable . ASSIGNMENT expression
    (77) assignment -> variable . ASSIGNMENT L_FIGBRACKET decl_list R_FIGBRACKET
    (78) assignment -> variable . ASSIGNMENT error
    (100) function_call -> variable . ASSIGNMENT VARIABLE call_list
    (102) ret_list -> variable .

  ! shift/reduce conflict for ASSIGNMENT resolved as shift
    ASSIGNMENT      shift and go to state 60
    COMMA           reduce using rule 102 (ret_list -> variable .)

  ! ASSIGNMENT      [ reduce using rule 102 (ret_list -> variable .) ]


state 14

    (79) for -> FOR . VARIABLE EQ expression COLON expression BEGINFOR NL stmt_list ENDFOR
    (80) for -> FOR . VARIABLE EQ expression COLON expression BEGIN NL stmt_list END
    (81) for -> FOR . error

    VARIABLE        shift and go to state 61
    error           shift and go to state 62


state 15

    (82) if -> IF . math_expression BEGINIF NL stmt_list ENDIF
    (83) if -> IF . math_expression BEGIN NL stmt_list END
    (84) if -> IF . error
    (42) math_expression -> . expression PLUS expression
    (43) math_expression -> . expression MINUS expression
    (44) math_expression -> . expression MUL_MATRIX expression
    (45) math_expression -> . expression MUL_ELEM expression
    (46) math_expression -> . expression TRANSPOSE
    (47) math_expression -> . SUM LBRACKET expression RBRACKET
    (48) math_expression -> . expression STL
    (49) math_expression -> . expression STR
    (50) math_expression -> . DENY expression
    (51) math_expression -> . expression AND expression
    (52) math_expression -> . expression LESS expression
    (53) math_expression -> . expression GREATER expression
    (39) expression -> . math_expression
    (40) expression -> . const
    (41) expression -> . variable
    (54) const -> . TRUE
    (55) const -> . FALSE
    (56) const -> . INT_DEC
    (57) const -> . INT_BIN
    (58) variable -> . VARIABLE
    (59) variable -> . VARIABLE LBRACKET index RBRACKET

    error           shift and go to state 64
    SUM             shift and go to state 54
    DENY            shift and go to state 55
    TRUE            shift and go to state 56
    FALSE           shift and go to state 57
    INT_DEC         shift and go to state 58
    INT_BIN         shift and go to state 59
    VARIABLE        shift and go to state 47

    math_expression                shift and go to state 63
    expression                     shift and go to state 65
    const                          shift and go to state 52
    variable                       shift and go to state 53

state 16

    (71) operation -> MOVE . LBRACKET math_expression RBRACKET

    LBRACKET        shift and go to state 66


state 17

    (72) operation -> RIGHT .

    NL              reduce using rule 72 (operation -> RIGHT .)


state 18

    (73) operation -> LEFT .

    NL              reduce using rule 73 (operation -> LEFT .)


state 19

    (74) operation -> WALL .

    NL              reduce using rule 74 (operation -> WALL .)


state 20

    (75) operation -> EXIT .

    NL              reduce using rule 75 (operation -> EXIT .)


state 21

    (89) function -> return_list . EQ FUNCTION VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (91) function -> return_list . EQ FUNCTION VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (85) return_list -> return_list . COMMA type VARIABLE

    EQ              shift and go to state 67
    COMMA           shift and go to state 68


state 22

    (90) function -> FUNCTION . VARIABLE LBRACKET func_list RBRACKET BEGIN NL stmt_list END
    (92) function -> FUNCTION . VARIABLE LBRACKET RBRACKET BEGIN NL stmt_list END
    (95) function -> FUNCTION . error

    VARIABLE        shift and go to state 69
    error           shift and go to state 70


state 23

    (98) function_call -> ret_list . ASSIGNMENT VARIABLE call_list
    (99) function_call -> ret_list . ASSIGNMENT VARIABLE
    (103) ret_list -> ret_list . COMMA variable

    ASSIGNMENT      shift and go to state 71
    COMMA           shift and go to state 72


state 24

    (19) type -> int .

    VARIABLE        reduce using rule 19 (type -> int .)


state 25

    (20) type -> bool .

    VARIABLE        reduce using rule 20 (type -> bool .)


state 26

    (21) int -> INT .

    VARIABLE        reduce using rule 21 (int -> INT .)


state 27

    (22) int -> CINT .

    VARIABLE        reduce using rule 22 (int -> CINT .)


state 28

    (23) int -> VINT .

    VARIABLE        reduce using rule 23 (int -> VINT .)


state 29

    (24) int -> MINT .

    VARIABLE        reduce using rule 24 (int -> MINT .)


state 30

    (25) int -> CVINT .

    VARIABLE        reduce using rule 25 (int -> CVINT .)


state 31

    (26) int -> CMINT .

    VARIABLE        reduce using rule 26 (int -> CMINT .)


state 32

    (27) bool -> BOOL .

    VARIABLE        reduce using rule 27 (bool -> BOOL .)


state 33

    (28) bool -> CBOOL .

    VARIABLE        reduce using rule 28 (bool -> CBOOL .)


state 34

    (29) bool -> VBOOL .

    VARIABLE        reduce using rule 29 (bool -> VBOOL .)


state 35

    (30) bool -> MBOOL .

    VARIABLE        reduce using rule 30 (bool -> MBOOL .)


state 36

    (31) bool -> CVBOOL .

    VARIABLE        reduce using rule 31 (bool -> CVBOOL .)


state 37

    (32) bool -> CMBOOL .

    VARIABLE        reduce using rule 32 (bool -> CMBOOL .)


state 38

    (2) stmt_list -> stmt_list statement .

    FOR             reduce using rule 2 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 2 (stmt_list -> stmt_list statement .)
    MOVE            reduce using rule 2 (stmt_list -> stmt_list statement .)
    RIGHT           reduce using rule 2 (stmt_list -> stmt_list statement .)
    LEFT            reduce using rule 2 (stmt_list -> stmt_list statement .)
    WALL            reduce using rule 2 (stmt_list -> stmt_list statement .)
    EXIT            reduce using rule 2 (stmt_list -> stmt_list statement .)
    FUNCTION        reduce using rule 2 (stmt_list -> stmt_list statement .)
    VARIABLE        reduce using rule 2 (stmt_list -> stmt_list statement .)
    INT             reduce using rule 2 (stmt_list -> stmt_list statement .)
    CINT            reduce using rule 2 (stmt_list -> stmt_list statement .)
    VINT            reduce using rule 2 (stmt_list -> stmt_list statement .)
    MINT            reduce using rule 2 (stmt_list -> stmt_list statement .)
    CVINT           reduce using rule 2 (stmt_list -> stmt_list statement .)
    CMINT           reduce using rule 2 (stmt_list -> stmt_list statement .)
    BOOL            reduce using rule 2 (stmt_list -> stmt_list statement .)
    CBOOL           reduce using rule 2 (stmt_list -> stmt_list statement .)
    VBOOL           reduce using rule 2 (stmt_list -> stmt_list statement .)
    MBOOL           reduce using rule 2 (stmt_list -> stmt_list statement .)
    CVBOOL          reduce using rule 2 (stmt_list -> stmt_list statement .)
    CMBOOL          reduce using rule 2 (stmt_list -> stmt_list statement .)
    $end            reduce using rule 2 (stmt_list -> stmt_list statement .)
    ENDIF           reduce using rule 2 (stmt_list -> stmt_list statement .)
    END             reduce using rule 2 (stmt_list -> stmt_list statement .)
    ENDFOR          reduce using rule 2 (stmt_list -> stmt_list statement .)


state 39

    (4) statement -> declaration NL .

    FOR             reduce using rule 4 (statement -> declaration NL .)
    IF              reduce using rule 4 (statement -> declaration NL .)
    MOVE            reduce using rule 4 (statement -> declaration NL .)
    RIGHT           reduce using rule 4 (statement -> declaration NL .)
    LEFT            reduce using rule 4 (statement -> declaration NL .)
    WALL            reduce using rule 4 (statement -> declaration NL .)
    EXIT            reduce using rule 4 (statement -> declaration NL .)
    FUNCTION        reduce using rule 4 (statement -> declaration NL .)
    VARIABLE        reduce using rule 4 (statement -> declaration NL .)
    INT             reduce using rule 4 (statement -> declaration NL .)
    CINT            reduce using rule 4 (statement -> declaration NL .)
    VINT            reduce using rule 4 (statement -> declaration NL .)
    MINT            reduce using rule 4 (statement -> declaration NL .)
    CVINT           reduce using rule 4 (statement -> declaration NL .)
    CMINT           reduce using rule 4 (statement -> declaration NL .)
    BOOL            reduce using rule 4 (statement -> declaration NL .)
    CBOOL           reduce using rule 4 (statement -> declaration NL .)
    VBOOL           reduce using rule 4 (statement -> declaration NL .)
    MBOOL           reduce using rule 4 (statement -> declaration NL .)
    CVBOOL          reduce using rule 4 (statement -> declaration NL .)
    CMBOOL          reduce using rule 4 (statement -> declaration NL .)
    $end            reduce using rule 4 (statement -> declaration NL .)
    ENDIF           reduce using rule 4 (statement -> declaration NL .)
    END             reduce using rule 4 (statement -> declaration NL .)
    ENDFOR          reduce using rule 4 (statement -> declaration NL .)


state 40

    (5) statement -> assignment NL .

    FOR             reduce using rule 5 (statement -> assignment NL .)
    IF              reduce using rule 5 (statement -> assignment NL .)
    MOVE            reduce using rule 5 (statement -> assignment NL .)
    RIGHT           reduce using rule 5 (statement -> assignment NL .)
    LEFT            reduce using rule 5 (statement -> assignment NL .)
    WALL            reduce using rule 5 (statement -> assignment NL .)
    EXIT            reduce using rule 5 (statement -> assignment NL .)
    FUNCTION        reduce using rule 5 (statement -> assignment NL .)
    VARIABLE        reduce using rule 5 (statement -> assignment NL .)
    INT             reduce using rule 5 (statement -> assignment NL .)
    CINT            reduce using rule 5 (statement -> assignment NL .)
    VINT            reduce using rule 5 (statement -> assignment NL .)
    MINT            reduce using rule 5 (statement -> assignment NL .)
    CVINT           reduce using rule 5 (statement -> assignment NL .)
    CMINT           reduce using rule 5 (statement -> assignment NL .)
    BOOL            reduce using rule 5 (statement -> assignment NL .)
    CBOOL           reduce using rule 5 (statement -> assignment NL .)
    VBOOL           reduce using rule 5 (statement -> assignment NL .)
    MBOOL           reduce using rule 5 (statement -> assignment NL .)
    CVBOOL          reduce using rule 5 (statement -> assignment NL .)
    CMBOOL          reduce using rule 5 (statement -> assignment NL .)
    $end            reduce using rule 5 (statement -> assignment NL .)
    ENDIF           reduce using rule 5 (statement -> assignment NL .)
    END             reduce using rule 5 (statement -> assignment NL .)
    ENDFOR          reduce using rule 5 (statement -> assignment NL .)


state 41

    (6) statement -> for NL .

    FOR             reduce using rule 6 (statement -> for NL .)
    IF              reduce using rule 6 (statement -> for NL .)
    MOVE            reduce using rule 6 (statement -> for NL .)
    RIGHT           reduce using rule 6 (statement -> for NL .)
    LEFT            reduce using rule 6 (statement -> for NL .)
    WALL            reduce using rule 6 (statement -> for NL .)
    EXIT            reduce using rule 6 (statement -> for NL .)
    FUNCTION        reduce using rule 6 (statement -> for NL .)
    VARIABLE        reduce using rule 6 (statement -> for NL .)
    INT             reduce using rule 6 (statement -> for NL .)
    CINT            reduce using rule 6 (statement -> for NL .)
    VINT            reduce using rule 6 (statement -> for NL .)
    MINT            reduce using rule 6 (statement -> for NL .)
    CVINT           reduce using rule 6 (statement -> for NL .)
    CMINT           reduce using rule 6 (statement -> for NL .)
    BOOL            reduce using rule 6 (statement -> for NL .)
    CBOOL           reduce using rule 6 (statement -> for NL .)
    VBOOL           reduce using rule 6 (statement -> for NL .)
    MBOOL           reduce using rule 6 (statement -> for NL .)
    CVBOOL          reduce using rule 6 (statement -> for NL .)
    CMBOOL          reduce using rule 6 (statement -> for NL .)
    $end            reduce using rule 6 (statement -> for NL .)
    ENDIF           reduce using rule 6 (statement -> for NL .)
    END             reduce using rule 6 (statement -> for NL .)
    ENDFOR          reduce using rule 6 (statement -> for NL .)


state 42

    (7) statement -> if NL .
